Added a script to make the pdf and usepackage hyperref

--- a/primerv7.tex
+++ b/primerv7.tex
@@ -1,5 +1,8 @@
 
 \documentclass[11pt]{article}
+
+\usepackage[dvips]{hyperref}
+
 \usepackage{axodraw,epsfig,graphics}
 \usepackage[margin=0.4cm]{caption}
 \setlength{\textheight}{9.3truein}
