Fix the bug that causes hyperref links equation to wrong locations

--- a/primerv7.tex
+++ b/primerv7.tex
@@ -1,7 +1,7 @@
 
 \documentclass[11pt]{article}
 
-\usepackage[dvips]{hyperref}
+\usepackage[dvips,hypertexnames=false]{hyperref}
 
 \usepackage{axodraw,epsfig,graphics}
 \usepackage[margin=0.4cm]{caption}
