--- a/primerv7.tex
+++ b/primerv7.tex
@@ -1,7 +1,9 @@
 
 \documentclass[11pt]{article}
 
-\usepackage[dvips,hypertexnames=false]{hyperref}
+\usepackage[dvips,hypertexnames=false,pdfpagelabels,bookmarksnumbered,linktocpage=true
+%color ,colorlinks=true,linkcolor=blue,citecolor=blue,filecolor=blue,urlcolor=blue
+]{hyperref}
 
 \usepackage{axodraw,epsfig,graphics}
 \usepackage[margin=0.4cm]{caption}
